# TwitchBot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.yaml  main.cpp
.github/workflows/: cmake.yml
include/helper/: config.hpp
lib/: CMakeLists.txt
lib/twitchIRC/: CMakeLists.txt
lib/twitchIRC/include/: twitchIRC.hpp
lib/twitchIRC/include/helper/: config.hpp
lib/twitchIRC/lib/: CMakeLists.txt
lib/twitchIRC/src/: twitchIRC.cpp
lib/twitchIRC/src/helper/: config.cpp
src/helper/: config.cpp
